add account file

--- a/assets/stylesheets/@application.scss
+++ b/assets/stylesheets/@application.scss
@@ -21,4 +21,5 @@
 @import "bem/aboutus/obmen";
 @import "bem/aboutus/contacts";
 @import "bem/checkout/checkout";
-@import "bem/checkbox"
+@import "bem/checkbox";
+@import "bem/account/account";
