--- a/assets/stylesheets/bem/checkout/checkout.scss
+++ b/assets/stylesheets/bem/checkout/checkout.scss
@@ -200,6 +200,10 @@
     }
 
     &__mob {
+        @media(min-width:1196px) {
+            display: none;
+        }
+
         padding-top: 14px;
 
         .title {
