--- a/assets/stylesheets/@application.scss
+++ b/assets/stylesheets/@application.scss
@@ -23,3 +23,5 @@
 @import "bem/checkout/checkout";
 @import "bem/checkbox";
 @import "bem/account/account";
+@import "bem/account/account-edit";
+@import "bem/account/favorite";
