--- a/assets/stylesheets/icons.scss
+++ b/assets/stylesheets/icons.scss
@@ -25,3 +25,19 @@
 .i-time {
   @include icon("\e906", "icomoon");
 }
+
+.i-myorders {
+  @include icon("\e907", "icomoon");
+}
+
+.i-account {
+  @include icon("\e908", "icomoon");
+}
+
+.i-favorite {
+  @include icon("\e909", "icomoon");
+}
+
+.i-viewed {
+  @include icon("\e90a", "icomoon");
+}
