--- a/assets/stylesheets/bem/old.scss
+++ b/assets/stylesheets/bem/old.scss
@@ -70,7 +70,7 @@ header {
 }
 
 .containerBlock {
-    max-width: 1170px;
+    max-width: 1196px;
     width: 100%;
     margin: auto;
 }
@@ -1005,7 +1005,7 @@ input {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     width: 100%;
-    max-width: 1170px;
+    max-width: 1196px;
     height: 340px;
     padding: 25px 35px 35px;
     display: flex;
@@ -1248,7 +1248,7 @@ body {
     font-weight: 500;
     font-size: 28px;
     margin: 15px auto;
-    max-width: 1170px;
+    max-width: 1196px;
     align-self: flex-start;
     width: 100%;
 
@@ -1260,7 +1260,7 @@ body {
     justify-content: space-between;
     margin: 0 auto;
     width: 100%;
-    max-width: 1170px;
+    max-width: 1196px;
 
 }
 
@@ -1357,13 +1357,17 @@ body {
     padding: 10px;
     margin: 5px 0 0 0 !important;
     background: var(--main-color);
-    color: #fff;
+    color: #fff !important;
     text-transform: uppercase;
     font-family: var(--Open-font);
     font-size: 12px;
     font-weight: 700;
     box-shadow: 0px 2px 10px rgba(41, 96, 204, 0.3), 0px 2px 4px rgba(41, 96, 204, 0.3);
     border-radius: 10px;
+
+    &:hover {
+        box-shadow: none;
+    }
 }
 
 .product-button-cart img {
@@ -1463,7 +1467,7 @@ body {
 }
 
 .main-navigation {
-    max-width: 1170px;
+    max-width: 1196px;
     width: 100%;
     margin: 0 auto;
     padding: 36px 5px 33px 5px;
@@ -1550,7 +1554,7 @@ body {
 .main-bread-crumbs_wrapper {
     display: flex;
     align-items: center;
-    max-width: 1170px;
+    max-width: 1196px;
     width: 100%;
     margin: 0 auto;
 }
@@ -1986,7 +1990,7 @@ body {
 
 .main-product-page_info {
     width: 100%;
-    max-width: 1170px;
+    max-width: 1196px;
     margin: 0 auto;
 }
 
@@ -2420,7 +2424,7 @@ body {
 }
 
 .main-list_wrapper_brands {
-    max-width: 1170px;
+    max-width: 1196px;
     width: 100%;
     margin: 30px auto;
     display: flex;
@@ -2474,7 +2478,7 @@ footer {
 }
 
 .footer-nav-list {
-    max-width: 1170px;
+    max-width: 1196px;
     width: 100%;
     margin: 0 auto;
 }
@@ -2507,7 +2511,7 @@ footer {
 
 .footer-sign-up {
     margin: 0 auto 20px auto;
-    max-width: 1170px;
+    max-width: 1196px;
     width: 100%;
 }
 
@@ -2565,7 +2569,7 @@ footer {
 
 .footer-payments {
     display: flex;
-    max-width: 1170px;
+    max-width: 1196px;
     width: 100%;
     justify-content: space-between;
     align-items: center;
@@ -2917,7 +2921,7 @@ footer {
     .main-katalog-wrapper {
         display: flex;
         align-items: flex-start;
-        max-width: 1170px;
+        max-width: 1196px;
         width: 100%;
         margin: 0 auto;
     }
@@ -2995,7 +2999,7 @@ footer {
 
     .main-catalog_list_desktop {
         display: flex;
-        max-width: 1170px;
+        max-width: 1196px;
         width: 100%;
         margin: 0 auto 20px;
     }
@@ -3201,7 +3205,7 @@ footer {
         display: flex;
         justify-content: space-evenly;
         width: 100%;
-        max-width: 1170px;
+        max-width: 1196px;
         margin: 0 auto;
         padding: 30px 0 0 0;
     }
