--- a/assets/html/partials/katalog/katalog.html
+++ b/assets/html/partials/katalog/katalog.html
@@ -98,7 +98,7 @@
                            fill="black" />
                      </svg>
                   </p>
-                  <div id="type_of_shoes" class="filter-block">
+                  <div id="type_of_shoes" class="filter-block type_of_shoes">
                      <label for="Балетки">
                         <input type="checkbox" name="Балетки" id="Балетки">
                         <p>Балетки</p>
@@ -154,7 +154,7 @@
                            fill="black" />
                      </svg>
                   </p>
-                  <div id="list_with_checkbox" class="filter-block">
+                  <div id="list_with_checkbox" class="filter-block list_with_checkbox">
                      <label for="BBT">
                         <input type="checkbox" name="BBT" id="BBT">
                         <p>BBT</p>
@@ -319,7 +319,7 @@
                         fill="black" />
                   </svg>
                </p>
-               <div id="type_of_shoes" class="filter-block">
+               <div id="type_of_shoes" class="filter-block type_of_shoes">
                   <label for="Балетки_desk">
                      <input type="checkbox" name="Балетки_desk" id="Балетки_desk">
                      <p>Балетки</p>
@@ -375,7 +375,7 @@
                         fill="black" />
                   </svg>
                </p>
-               <div id="list_with_checkbox" class="filter-block">
+               <div id="list_with_checkbox" class="filter-block list_with_checkbox">
                   <label for="BBT_desk">
                      <input type="checkbox" name="BBT_desk" id="BBT_desk">
                      <p>BBT</p>
