--- a/assets/stylesheets/@application.scss
+++ b/assets/stylesheets/@application.scss
@@ -25,3 +25,5 @@
 @import "bem/account/account";
 @import "bem/account/account-edit";
 @import "bem/account/favorite";
+@import "bem/account/viewed";
+@import "bem/account/myorders";
