--- a/assets/stylesheets/defaults.scss
+++ b/assets/stylesheets/defaults.scss
@@ -49,3 +49,5 @@ input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
   transition: background-color 5000s ease-in-out 0s;
 }
+
+$t: all 0.5s ease;
