--- a/assets/stylesheets/bem/account/favorite.scss
+++ b/assets/stylesheets/bem/account/favorite.scss
@@ -9,8 +9,8 @@
     align-items: flex-start;
     justify-content: flex-start;
     position: relative;
-    left: -10px;
-    width: calc(100% + 20px);
+    right: -10px;
+    width: 912px;
 
     .main-product-list_item {
       width: 284px;
