hero slider/singup

--- a/assets/html/partials/footer.html
+++ b/assets/html/partials/footer.html
@@ -91,4 +91,9 @@
             <img src="img/icons/paypal.svg" alt="">
         </div>
     </div>
+    <script src="inc/modernizr.js"></script> <!-- Modernizr -->
+    <!-- <script src="inc/jquery-2.1.4.js"></script> -->
+    <script src="inc/jquery.mobile.custom.min.js"></script>
+    <script src="inc/snap.svg-min.js"></script>
+    <script src="inc/main.js"></script> <!-- Resource jQuery -->
 </footer>
