--- a/assets/stylesheets/@application.scss
+++ b/assets/stylesheets/@application.scss
@@ -27,3 +27,5 @@
 @import "bem/account/favorite";
 @import "bem/account/viewed";
 @import "bem/account/myorders";
+@import "bem/main/hero";
+@import "bem/signup/signup";
