--- a/assets/html/partials/main/main.html
+++ b/assets/html/partials/main/main.html
@@ -3,33 +3,92 @@
       <div class="containerBlock">
          <div class="main-catalog_list">
             <div class="main-catalog_list_slider">
-               <!-- SWIPER -->
-               <div class="swiper-container">
-                  <div class="swiper-wrapper">
-                     <div class="swiper-slide"><a href=""><img src="img/images/desktopSliderImage1.jpg" alt=""></a>
-                     </div>
-                     <div class="swiper-slide"><a href=""><img src="img/images/desktopSliderImage1.jpg" alt=""></a>
-                     </div>
-                     <div class="swiper-slide"><a href=""><img src="img/images/desktopSliderImage1.jpg" alt=""></a>
-                     </div>
-                     <div class="swiper-slide"><a href=""><img src="img/images/desktopSliderImage1.jpg" alt=""></a>
-                     </div>
-                  </div>
-                  <!-- Add Arrows -->
-                  <div class="swiper-button-next">
-                     <svg width="14" height="33" viewBox="0 0 14 33" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                           d="M0.499756 17.1247C0.207581 16.7595 0.207582 16.2405 0.499757 15.8753L12.2191 1.22608C12.8096 0.487946 14 0.905504 14 1.85078L14 31.1492C14 32.0945 12.8096 32.5121 12.2191 31.7739L0.499756 17.1247Z" />
-                     </svg>
-                  </div>
-                  <div class="swiper-button-prev">
-                     <svg width="14" height="33" viewBox="0 0 14 33" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                           d="M0.499756 17.1247C0.207581 16.7595 0.207582 16.2405 0.499757 15.8753L12.2191 1.22608C12.8096 0.487946 14 0.905504 14 1.85078L14 31.1492C14 32.0945 12.8096 32.5121 12.2191 31.7739L0.499756 17.1247Z" />
-                     </svg>
-                  </div>
-                  <!-- Add Pagination -->
-                  <div class="swiper-pagination"></div>
+               <div class="hero-slider">
+                  <div class="cd-slider-wrapper">
+                     <ul class="cd-slider" data-step1="M1402,800h-2V525V0h1c0.6,0,1,0.4,1,1V800z"
+                        data-step2="M1400,800H739L427,523L760,0h639c0.6,0,1,0.4,1,1V800z"
+                        data-step3="M1400,800H0V521V0h1399c0.6,0,1,0.4,1,1V800z"
+                        data-step4="M-2,800h2V525V0h-1c-0.6,0-1,0.4-1,1V800z"
+                        data-step5="M0,800h661l312-277L640,0L1,0C0.4,0,0,0.4,0,1L0,800z"
+                        data-step6="M0,800h1400V521V0L1,0C0.4,0,0,0.4,0,1L0,800z">
+                        <li class="visible">
+                           <div class="cd-svg-wrapper">
+                              <svg viewBox="0 0 1400 800">
+                                 <title>Aimated SVG</title>
+                                 <defs>
+                                    <clipPath id="cd-image-1">
+                                       <path id="cd-changing-path-1" d="M1400,800H0V521V0h1399c0.6,0,1,0.4,1,1V800z" />
+                                    </clipPath>
+                                 </defs>
+
+                                 <image clip-path="url(#cd-image-1)" xlink:href="img/images/desktopSliderImage1.jpg">
+                                 </image>
+                              </svg>
+                           </div> <!-- .cd-svg-wrapper -->
+                        </li>
+
+                        <li>
+                           <div class="cd-svg-wrapper">
+                              <svg viewBox="0 0 1400 800">
+                                 <title>Aimated SVG</title>
+                                 <defs>
+                                    <clipPath id="cd-image-2">
+                                       <path id="cd-changing-path-2" d="M1400,800H0V521V0h1399c0.6,0,1,0.4,1,1V800z" />
+                                    </clipPath>
+                                 </defs>
+
+                                 <image clip-path="url(#cd-image-2)" xlink:href="img/images/ukrDesktop.jpg">
+                                 </image>
+                              </svg>
+                           </div> <!-- .cd-svg-wrapper -->
+                        </li>
+
+                        <li>
+                           <div class="cd-svg-wrapper">
+                              <svg viewBox="0 0 1400 800">
+                                 <title>Aimated SVG</title>
+                                 <defs>
+                                    <clipPath id="cd-image-3">
+                                       <path id="cd-changing-path-3" d="M1400,800H0V521V0h1399c0.6,0,1,0.4,1,1V800z" />
+                                    </clipPath>
+                                 </defs>
+
+                                 <image clip-path="url(#cd-image-3)" xlink:href="img/images/desktopSliderImage1.jpg">
+                                 </image>
+                              </svg>
+                           </div> <!-- .cd-svg-wrapper -->
+                        </li>
+
+                        <li>
+                           <div class="cd-svg-wrapper">
+                              <svg viewBox="0 0 1400 800">
+                                 <title>Aimated SVG</title>
+                                 <defs>
+                                    <clipPath id="cd-image-4">
+                                       <path id="cd-changing-path-4" d="M1400,800H0V521V0h1399c0.6,0,1,0.4,1,1V800z" />
+                                    </clipPath>
+                                 </defs>
+
+                                 <image clip-path="url(#cd-image-4)" xlink:href="img/images/ukrDesktop.jpg">
+                                 </image>
+                              </svg>
+                           </div> <!-- .cd-svg-wrapper -->
+                        </li>
+
+                     </ul> <!-- .cd-slider -->
+
+                     <ul class="cd-slider-navigation">
+                        <li><a href="#0" class="next-slide"><i class="i-arrow2"></i></a></li>
+                        <li><a href="#0" class="prev-slide"><i class="i-arrow2"></i></a></li>
+                     </ul> <!-- .cd-slider-navigation -->
+
+                     <ol class="cd-slider-controls">
+                        <li class="selected"><a href="#0"><em>Item 1</em></a></li>
+                        <li><a href="#0"><em>Item 2</em></a></li>
+                        <li><a href="#0"><em>Item 3</em></a></li>
+                        <li><a href="#0"><em>Item 4</em></a></li>
+                     </ol> <!-- .cd-slider-controls -->
+                  </div> <!-- .cd-slider-wrapper -->
                </div>
             </div>
             <!-- MOBILE -->
