--- a/assets/stylesheets/bem/checkout/checkout.scss
+++ b/assets/stylesheets/bem/checkout/checkout.scss
@@ -366,6 +366,21 @@ form {
                 }
             }
         }
+
+        &__row {
+            display: flex;
+            justify-content: space-between;
+
+            .wrap {
+                flex-direction: column;
+                align-items: flex-start;
+                justify-content: flex-start;
+
+                p {
+                    margin-bottom: 6px;
+                }
+            }
+        }
     }
 
     input[type="submit"] {
