--- a/assets/stylesheets/bem/old.scss
+++ b/assets/stylesheets/bem/old.scss
@@ -2317,10 +2317,10 @@ body {
 .cd-slider-wrapper {
     position: relative;
     width: 100%;
+    max-width: 1120px;
     /* hide horizontal scrollbar on IE11 */
-    overflow: hidden;
+    overflow-x: hidden;
     background: #fff;
-    height: 100%;
 }
 
 .cd-slider>li {
@@ -2344,15 +2344,18 @@ body {
     opacity: 1;
 }
 
+.cd-slider .cd-svg-wrapper {
+    /* using padding Hack to fix bug on IE - svg height not properly calculated */
+    height: 0;
+    padding-bottom: 57.15%;
+}
+
 .cd-slider-wrapper svg {
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-
-    image {
-        width: 100%;
-    }
 }
 
 /* -------------------------------- 
@@ -2404,12 +2407,6 @@ body {
 .cd-slider-navigation li:last-of-type {
     left: 10px;
     right: auto;
-}
-
-.prev-slide {
-    &:hover {
-        transform: scale(1.1)rotateY(-180deg) !important;
-    }
 }
 
 .cd-slider-navigation li:last-of-type a {
@@ -2474,52 +2471,6 @@ body {
 
 .no-touch .cd-slider-controls a:hover {
     background-color: #ffffff;
-}
-
-.main-list_brands {
-    padding: 0 15px;
-}
-
-.main-list_wrapper_brands {
-    max-width: 1196px;
-    width: 100%;
-    margin: 30px auto;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.main-list_item {
-    width: 100%;
-    margin: 0 0 10px 0;
-}
-
-.main-list_item a {
-    display: block;
-    text-align: center;
-    border-radius: 16px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.main-list_item a img {
-    width: 100%;
-}
-
-.main-list_item_img_wrapper {
-    width: 100%;
-    padding: 20px 30px;
-    background: #fff;
-    border-radius: 16px;
-}
-
-.main-list_item p {
-    margin: 20px 0 0 0;
-    font-family: var(--Fira-font);
-    font-weight: 600;
-    font-size: 14px;
 }
 
 
